# airbyte-connector

./: .gitignore  Makefile  README.md  TROUBLESHOOTING.md  devcontainer.md  flake.nix  get-started.txt  surrealdb.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/abctl/: devcontainer-feature.json  install.sh
.devcontainer/surrealdb/: install.sh
.github/workflows/: build-and-publish.yml  e2e.yml  integration.yml
destination-surrealdb/: .gitignore  README.md  history.txt  pyproject.toml
destination-surrealdb/.devcontainer/: devcontainer.json  docker-compose.yml
destination-surrealdb/.devcontainer/surrealdb/: devcontainer-feature.json  install.sh
destination-surrealdb/destination_surrealdb/: __init__.py  destination.py
destination-surrealdb/integration_tests/: configured_catalog.json  integration_test.py  messages.jsonl  messages_id.jsonl  messages_id_append.jsonl  messages_id_append_dedup.jsonl
destination-surrealdb/unit_tests/: unit_test.py
docs/integrations/destinations/: surrealdb-migrations.md  surrealdb.md
scripts/: e2e-test.sh
